[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name         = "odsf"
version      = "0.1.0"
description  = "Objective-Driven Stochastic Fields Framework"
readme       = "README.md"
license      = "MIT"
authors      = ["David Wynter <daed@yambina.com>"]
keywords     = ["stochastic fields", "objective-driven systems", "dynamical systems", "markov processes", "complex systems"]
classifiers  = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]

[tool.poetry.dependencies]
python     = ">=3.9"
numpy      = ">=1.24"
scipy      = ">=1.10"
networkx   = ">=3.0"
torch      = ">=2.0"
pandas     = ">=2.0"
matplotlib = ">=3.7"
pytest = "^8.3.5"

[tool.poetry.dev-dependencies]
pytest  = ">=7.0"
flake8  = ">=6.0"
sphinx  = ">=6.0"

[tool.poetry.extras]
viz = ["matplotlib"]

[[tool.poetry.packages]]
include = "osdf"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

